# TinyPersonaEngine

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  REUSE_MAP.md
src/living_entity_firstperson/: __init__.py  actions.py  authority.py  blackboard.py  cli.py  memory.py  models.py  perception.py  pipeline.py  ports.py  transducer.py
tests/: test_actions.py  test_authority.py  test_blackboard.py  test_perception.py  test_transducer.py
