[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "living-entity-firstperson"
version = "0.1.0"
description = "A character-relative bridge from authoritative game observations to private, consequential first-person experience."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Living Entity contributors" }]
keywords = ["npc", "game-ai", "perception", "first-person", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "build>=1.2"]

[project.scripts]
living-entity-firstperson = "living_entity_firstperson.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
